welcome.lessons.welcome.bdr.BDR2.scala.error
BDR2:7: error: 'case' expected but string literal found.
      "R"=>droite(); avance()
      ^BDR2:7: error: '}' expected but ';' found.
      "R"=>droite(); avance()
                   ^BDR2:8: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "L"=>gauche(); avance()
      ^BDR2:9: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "I"=>gauche(); gauche(); avance()
      ^BDR2:10: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "A"=>avance()
      ^BDR2:11: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "B"=>avance(); avance()
      ^BDR2:12: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "C"=>avance(); avance(); avance()
      ^BDR2:13: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "D"=>avance(); avance(); avance(); avance()
      ^BDR2:14: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "E"=>avance(); avance(); avance(); avance(); avance()
      ^BDR2:15: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "F"=>avance(); avance(); avance(); avance(); avance(); avance()
      ^BDR2:16: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "Z"=>recule()
      ^BDR2:17: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "Y"=>recule(); recule()
      ^BDR2:18: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "X"=>recule(); recule(); recule()
      ^BDR2:19: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "W"=>recule(); recule(); recule(); recule()
      ^BDR2:20: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "V"=>recule(); recule(); recule(); recule(); recule()
      ^BDR2:21: error: not a legal formal parameter.
Note: Tuples cannot be directly destructured in method or function parameters.
      Either create a single parameter accepting the Tuple1,
      or consider a pattern matching anonymous function: `{ case (param1, param1) => ... }
      "U"=>recule(); recule(); recule(); recule(); recule(); recule()
      ^BDR2:25: error: ';' expected but 'else' found.
  else {BDR=false}
  ^BDR2:29: error: eof expected but '}' found.
}
^